--- a/layanan.css
+++ b/layanan.css
@@ -105,7 +105,7 @@
       grid-column: 3;
       grid-row: 6 / span 3;
     }
-    
+    }
 
   ::-webkit-scrollbar {
     width: 1.1em;
@@ -452,4 +452,15 @@
     margin-top: 20px;
     border-top: 1px solid #444;
     padding-top: 10px;
+}
+
+@media (max-width: 600px) {
+    .footer-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-section {
+        text-align: center;
+    }
 }
